fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     font-family: 'Odibee Sans', cursive;
     color: #454d66;
     font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .info {
@@ -10,9 +13,9 @@ body {
 }
 
 .gameboard {
-    
-    margin-left: 40vw;
+    text-align: center;
     margin-top: 50px;
+    width: 150px;
     font-size:30px;
     text-transform: uppercase;
     display: grid;
